# kis_passive_trader

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kis_passive_trader/: __init__.py  __main__.py  broker_base.py  cli.py  kis_api.py  mock_broker.py  payload.py  peg_executor.py
tests/: test_peg_executor.py
